// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FiltersMenuSection /> should render properly for a "label" filter 1`] = `
.emotion-0 {
  margin-left: 32px;
  border-top: 1px solid #3b3b3b;
}

.emotion-0:first-of-type {
  border-top: none;
}

.emotion-1 {
  color: #b3b3b3;
  padding: 8px;
  margin-left: -32px;
}

.emotion-1:hover {
  background-color: #0074f538;
  color: #ffffff;
}

.emotion-1:hover svg {
  color: #ffffff;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0;
  padding-bottom: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-4 {
  padding: 0;
  width: 16px;
  height: 16px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-6 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-7 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-left: 8px;
}

.emotion-8 {
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <label
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <input
          className="emotion-4"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="labels.zvi-console_face_recognition-face-recognition"
        />
        <div
          className="emotion-5"
        >
          <svg
            className="emotion-6"
            data-file-name="checkmark.svg"
            height={20}
          />
        </div>
      </div>
      <div
        className="emotion-7"
      >
        <span
          className="emotion-8"
        >
          zvi-console_face_recognition-face-recognition
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`<FiltersMenuSection /> should render properly for a sub-section 1`] = `
.emotion-0 {
  margin-left: -16px;
  margin-right: -16px;
  padding: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  border-top: 4px solid #3b3b3b;
}

.emotion-0:first-of-type {
  padding-top: 0;
  border-top: none;
}

.emotion-0:last-of-type {
  padding-bottom: 0;
}

.emotion-1 {
  font-family: Roboto Mono;
  font-weight: 400;
}

.emotion-2 {
  margin-left: 32px;
  border-top: 1px solid #3b3b3b;
}

.emotion-2:first-of-type {
  border-top: none;
}

.emotion-3 {
  color: #b3b3b3;
  padding: 8px;
  margin-left: -32px;
}

.emotion-3:hover {
  background-color: #0074f538;
  color: #ffffff;
}

.emotion-3:hover svg {
  color: #ffffff;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0;
  padding-bottom: 0;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-6 {
  padding: 0;
  width: 16px;
  height: 16px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-7 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-8 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-9 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-left: 8px;
}

.emotion-10 {
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

<div
  className="emotion-0"
>
  <h4
    className="emotion-1"
  >
    zvi
  </h4>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        <div
          className="emotion-5"
        >
          <input
            className="emotion-6"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="analysis.zvi.tinyProxy"
          />
          <div
            className="emotion-7"
          >
            <svg
              className="emotion-8"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-9"
        >
          <span
            className="emotion-10"
          >
            tinyProxy
          </span>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`<FiltersMenuSection /> should render properly for an "exists" filter 1`] = `
.emotion-0 {
  margin-left: 32px;
  border-top: 1px solid #3b3b3b;
}

.emotion-0:first-of-type {
  border-top: none;
}

.emotion-1 {
  color: #b3b3b3;
  padding: 8px;
  margin-left: -32px;
}

.emotion-1:hover {
  background-color: #0074f538;
  color: #ffffff;
}

.emotion-1:hover svg {
  color: #ffffff;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0;
  padding-bottom: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-4 {
  padding: 0;
  width: 16px;
  height: 16px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-6 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-7 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-left: 8px;
}

.emotion-8 {
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <label
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <input
          className="emotion-4"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="location.point"
        />
        <div
          className="emotion-5"
        >
          <svg
            className="emotion-6"
            data-file-name="checkmark.svg"
            height={20}
          />
        </div>
      </div>
      <div
        className="emotion-7"
      >
        <span
          className="emotion-8"
        >
          point
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`<FiltersMenuSection /> should render properly if a field has no possible filter 1`] = `null`;
